# worktrail

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  PLAN.md  README.md  SKILL.md  agents.md.block  go.mod  pyproject.toml
banks/worktrail-2gb2fb3t0cse7/: mnemopi.db
cmd/worktrail/: main.go  main_test.go  worktrail
hooks/: post-checkout  post-commit  prepare-commit-msg
internal/archive/: tck_reader.go
internal/context/: context.go
internal/contract/: contract.go
internal/doctor/: doctor.go
internal/executor/: executor.go
internal/gitnotes/: gitnotes.go  gitnotes_test.go
internal/index/: index.go
internal/install/: install.go
internal/list/: list.go
internal/report/: report.go
internal/reviewer/: reviewer.go
internal/time/: time.go
internal/types/: types.go
internal/verify/: verify.go
internal/verify/adapters/: gotest.go  manual.go  none.go  pytest.go  register.go  shell.go
references/: domain-model.md  v2-design.md  v2-spec.md
references/schemas/: contract.json  decision.json  domain.json  progress.json  review_package.json  review_result.json  spec.json  vrr.json
src/worktrail/: __init__.py  __main__.py
src/worktrail/cli/: __init__.py  commands.py  doctor.py  main.py
src/worktrail/core/: __init__.py  config.py  db.py  models.py  repository.py
src/worktrail/git_bridge/: __init__.py  hooks.py  parser.py
src/worktrail/migrator/: __init__.py  migrator.py  parser.py
src/worktrail/reporter/: __init__.py  formatter.py  (+1 more)
tests/: test_cli.py  test_core.py  test_git_bridge.py  test_migrator.py  test_reporter.py  test_tracker.py
(+12 files in other folders)
